# robot_ws

Qt/: abc.py  allservo.py  allservo.ui  xyz.py  xyz.ui  xyz1.py  xyz_4.py
Robot_ws/: README.md  build_script.bash
Robot_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Robot_ws/devel/include/custom_messages_module/: Motor.h  myMessage.h
Robot_ws/devel/include/low_level_controllers/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  CmdBundle.h  Motor.h  UIcommand.h  UIcommandRequest.h  UIcommandResponse.h  tip.h  xyz.h
Robot_ws/devel/include/more_custom_msgs/: AirAdvisor_Advisor.h  AirAdvisor_Hive_Position.h  AirAdvisor_Status.h  AirAdvisor_Weather.h  BeeState.h  BeekeeperReason.h  GPSPosition.h  Hve_Channel_Status.h  Hve_Conf_Param.h  Hve_Cpu_Status.h  Hve_Decision.h  Hve_Env_Status.h  Hve_Led_Status.h  Hve_Raw_Status.h  Hve_Roof.h  Hve_Single_Value.h  Hve_Updated_Params.h  Hve_Weather_Query.h  Hve_Weather_Report.h  Hve_Weather_Status.h  Hve_Write_Params.h  Macro_Event.h  Macro_Info.h  Macro_Marker.h  Macro_Measurement.h  Macro_Position.h  Macro_Target.h  Macro_TimePosition.h  Process_TrackedTarget.h  Process_TrackedTarget_Timeout.h  SatInfo.h  Sfl_Config.h  Sfl_Info.h  Sfl_Light_H.h  Sfl_Light_Hs.h  Sfl_Light_Hsv.h  Sfl_Light_Hsvw.h  Sfl_Light_Mode.h  Sfl_Light_Power.h  Sfl_Light_Pulse.h  (+17 more)
Robot_ws/devel/lib/pkgconfig/: custom_messages_module.pc  js_module.pc  low_level_controllers.pc  more_custom_msgs.pc
Robot_ws/src/custom_messages_module/: CMakeLists.txt  package.xml
Robot_ws/src/custom_messages_module/msg/: myMessage.msg
Robot_ws/src/js_module/: CMakeLists.txt  package-lock.json  package.json
Robot_ws/src/js_module/launch/: robot_setup.launch
Robot_ws/src/js_module/scripts/: listener.js  ros_node_script.js  ser.js  server.js  server1.js  talker.js
Robot_ws/src/low_level_controllers/: CMakeLists.txt
Robot_ws/src/low_level_controllers/launch/: robot_setup.launch
Robot_ws/src/low_level_controllers/msg/: CmdBundle.msg  tip.msg
Robot_ws/src/low_level_controllers/scripts/: add_two_ints_client.py  add_two_ints_server.py  all_slider.py  allservo.py  communicationHandler.py  (+7 more)
Robot_ws/src/more_custom_msgs/: CMakeLists.txt
Robot_ws/src/more_custom_msgs/msg/: AirAdvisor_Advisor.msg  AirAdvisor_Status.msg  AirAdvisor_Weather.msg  BeeState.msg  BeekeeperReason.msg  GPSPosition.msg  Hve_Channel_Status.msg  Hve_Conf_Param.msg  Hve_Cpu_Status.msg  Hve_Decision.msg  Hve_Env_Status.msg  Hve_Led_Status.msg  Hve_Raw_Status.msg  Hve_Roof.msg  Hve_Single_Value.msg  Hve_Updated_Params.msg  Hve_Weather_Query.msg  Hve_Weather_Report.msg  Hve_Weather_Status.msg  Hve_Write_Params.msg  Macro_Event.msg  Macro_Info.msg  Macro_Marker.msg  Macro_Measurement.msg  Macro_Position.msg  Macro_Target.msg  Macro_TimePosition.msg  Process_TrackedTarget.msg  Process_TrackedTarget_Timeout.msg  SatInfo.msg  Sfl_Config.msg  Sfl_Env_status.msg  Sfl_Imu_status.msg  Sfl_Info.msg  Sfl_Light_Alarm.msg  Sfl_Light_H.msg  Sfl_Light_Hs.msg  Sfl_Light_Hsv.msg  Sfl_Light_Hsvw.msg  Sfl_Light_Mode.msg  (+20 more)
angular/ngsocket/: README.md  angular.json  package-lock.json  package.json
angular/ngsocket1/: angular.json  package-lock.json
angular/ngsocket1/src/: index.html  karma.conf.js
angular/testui/: README.md  angular.json  dependancies_my  package-lock.json  package.json  server.js
angular/testui/src/: index.html  karma.conf.js
arduino/Split_testing/: Split_testing.ino
arduino/Sweep_test_new_servo/: Sweep_test_new_servo.ino
arduino/arm_modified/: arm_modified.ino
arduino/correct_wheel/encoder/: MotorShield.cpp  encoder.ino
arduino/encoder/: MOTORCONTROLLER.h  MotorShield.cpp  MotorShield.h  encoder.ino
arduino/encoder_1/: MOTORCONTROLLER.cpp
arduino/encoder_1/encoder/: encoder.ino
arduino/slave_i2c/: slave_i2c.ino
arduino/slave_i2c_arm/: slave_i2c_arm.ino
arduino/slave_i2c_wheel/: slave_i2c_wheel.ino
ropo_before_JS/Robot_ws/devel/: setup.sh
(+393 files in other folders)
